// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useIsInRange: start date and end date selected: in range 1`] = `
Object {
  "data-css-4a5f34": "",
}
`;

exports[`useIsInRange: start date and end date selected: out of range 1`] = `Object {}`;

exports[`useIsInRange: start date and end date selected: start date 1`] = `
Object {
  "data-css-1r79e04": "",
}
`;

exports[`useIsInRange: start date selected: in range 1`] = `
Object {
  "data-css-4a5f34": "",
}
`;

exports[`useIsInRange: start date selected: out of range 1`] = `Object {}`;

exports[`useIsInRange: start date selected: start date 1`] = `
Object {
  "data-css-1r79e04": "",
}
`;
